crates/test-files/fixtures/compile_errors/invalid_block_field.fe
contract Foo {
    pub fn foo() {
        block.foo
    }
}
